<resources>
    <string name="app_name">           Hatle Dawa</string>
    <string name="create_account">Create Account</string>
    <string name="login_hint">Log in</string>
    <string name="singup">Sign Up</string>
    <string name="joinus">هل تريد انشاء حساب صيدليه؟</string>
    <string name="forget_password">Forget Password</string>
    <string name="mobile_number_hint">رقم الهاتف   </string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">ConfirmPassword</string>
    <string name="regidter_hint">انشاء حساب صيدليه</string>
    <string name="have_account">هل تملك حساب صيدليه بالفعل ؟</string>
    <string name="singup_hint">انشاء الحساب</string>
    <string name="name_hint">User Name</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="verf">Enter Verfication Code: </string>
    <string name="enter_code">Enter Code</string>
    <string name="resend">Resend Verfication Code ?</string>
    <string name="verf_title">Verify Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification_item">Notification</string>
    <string name="upgrade_to_doctor">Upgrade to Doctor</string>
    <string name="logout">Log Out</string>
    <string name="drug_name_hint"> Drug Name</string>
    <string name="drug_type_hint"> Drug Type</string>
    <string name="drug_concentration_hint">Drug concentration</string>
    <string name="post_hint">Post</string>
    <string name="cancel_hint">Cancel</string>
    <string name="look_for">Look For</string>
    <string name="doctor_hint">Doctors</string>
    <string name="mark_bad_hint">Mark Bad</string>
    <string name="search">Search</string>
    <string name="save_hint">Save</string>
    <string name="add_post">Add Post</string>
    <string name="pharmacy_phone_hint">Pharmacy Phone</string>
    <string name="pharmacy_lisence_hint">Pharmacy License</string>
    <string name="upgrade">Upgrade</string>
    <string name="new_feed">New Feeds</string>
    <string name="title_activity_main_tabbed">Drug</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <array name="drugTypeList">
        <item> amp </item>
        <item> suryp </item>
        <item> susp </item>
        <item> caps </item>
        <item> tabs </item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
