<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_gravity="center"
                android:text="@string/add_post"
                android:textColor="@color/red"
                android:textSize="19sp"
                android:textStyle="bold" />

            <View
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/drug_name_add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_name_hint"
            android:paddingLeft="20dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/drug_con_add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/drug_concentration_hint"
            android:inputType="numberDecimal"
            android:paddingLeft="20dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel"

        >

        <Spinner
            android:id="@+id/drug_type_add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/drugTypeList"
            android:hint="@string/drug_type_hint"
            android:paddingLeft="10dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/post_add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".5"
            android:background="@drawable/button_shape"
            android:text="@string/post_hint"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight=".5"
            android:background="@drawable/white_buuton"
            android:text="@string/cancel_hint"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>