<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_action_call_drk"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="2"
                    android:drawableLeft="@drawable/ic_action_secure"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_shape"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/login_hint"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_buuton"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:id="@+id/signUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinus"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:elevation="5dp"
                    android:text="@string/singup"
                    android:textColor="#ea3729"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>