<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">


        <EditText
            android:id="@+id/name_edit_profile"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:hint="@string/name_hint"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/phone_number_profile"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_call_drk"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/password_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_action_secure"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_shape"
        android:enabled="false"
        android:text="@string/save_hint"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>